poormanrekog/static/css/index.css
html,
body {
  height: 100%;
  margin: 0;
  min-width: 30spurce emv/bin/acti0px;
}
button {
  margin: 20px;
}
.heading {
  margin: 0;

  height: 20vh;
  background-color: aqua;
  width: 100%;
}
.navbar-default {
  margin: 0 !important;
}
.para {
  /* width: 100%; */
  /* position: relative; */
  font-weight: 400;
  font-size: 20px;
  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
    "Lucida Sans Unicode", "Geneva", "Verdana", "sans-serif";
  background-color: lightgoldenrodyellow;
  /* height: 20vh; */
  padding: 80px;
  text-align: center;
}

.image-para {
  font-weight: 400;
  font-size: 20px;
  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
    "Lucida Sans Unicode", "Geneva", "Verdana", "sans-serif";
  background-color: lightgoldenrodyellow;
  /* height: 20vh; */
  padding: 80px;
  text-align: center;
  width: 60%;
  display: inline-block;
}

.para-heading {
  position: relative;
  top: -60px;
  left: -60px;
  font-size: 30px;
  font-weight: bolder;
  text-decoration: underline;
}

pre code {
  display: inline;
}

.imageform {
  display: inline;
  margin: 30px;
}

nav {
  position: fixed;
  top: 0;
  width: 100%;
}
.canvas {
  margin: 20px;
  display: inline;
  height: parent;
  width: 20%;
  text-align: center;
  background-color: lightgoldenrodyellow;
}

#imagecanvas {
  background-color: transparent;

  /* position: relative; */
  /* bottom: 20vh; */
  /* top: 2vh;
  left: 2vw; */
}

.image-container {
  display: flex;
  text-align: center;
  background-color: lightgoldenrodyellow;
  /* display: inline-block; */
}

.card {
  background-color: goldenrod;
  border: 2px solid black;
  display: inline-block;
  margin: 10px;
  padding: 20px;
}
.card-title {
  text-decoration: underline;
  font-family: "Courier New", "Courier", "monospace";
}

.image-card-container {
  display: inline;
  text-align: center;
}

.canvas-wrapper {
  text-align: center;
  display: inline;
}

.name-result {
  /* border: 2px solid black; */
  display: inline;
  height: 20vh;
  overflow: scroll;
  background-color: cornsilk;
  margin: 20px;
}

.canvas-image-container {
  display: inline-block;
}

